--- a/DormitoryForDelivery/DormitoryForDelivery/View Controllers/SettingScreenViewControllers/MyInfoTableViewCell.xib
+++ b/DormitoryForDelivery/DormitoryForDelivery/View Controllers/SettingScreenViewControllers/MyInfoTableViewCell.xib
@@ -17,68 +17,78 @@
                 <rect key="frame" x="0.0" y="0.0" width="369" height="126"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du3-yu-gUb">
-                        <rect key="frame" x="34" y="26" width="35" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="학번:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YO9-e3-CiM">
-                        <rect key="frame" x="34" y="55" width="35" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBm-cW-if1">
-                        <rect key="frame" x="20" y="84" width="49" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김덕환" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlc-mo-3NB">
-                        <rect key="frame" x="77" y="26" width="278" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="SPs-Um-aUu"/>
-                            <constraint firstAttribute="width" constant="278" id="l3Y-nF-ivd"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gns2472@gs.cwnu.ac.kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAY-N1-ihW">
-                        <rect key="frame" x="77" y="84" width="278" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="uCt-1k-HZx"/>
-                            <constraint firstAttribute="width" constant="278" id="zzb-wt-el7"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20175149" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5R-DD-oWP">
-                        <rect key="frame" x="77" y="53" width="278" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="3Il-sA-NYU"/>
-                            <constraint firstAttribute="width" constant="278" id="Vgf-4H-aTK"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="xeo-Cr-Vda">
+                        <rect key="frame" x="22" y="28" width="330.5" height="71"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Y17-89-ejz">
+                                <rect key="frame" x="1" y="0.0" width="329.5" height="21"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이   름 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du3-yu-gUb">
+                                        <rect key="frame" x="0.0" y="0.0" width="43.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김덕환" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlc-mo-3NB">
+                                        <rect key="frame" x="51.5" y="0.0" width="278" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="SPs-Um-aUu"/>
+                                            <constraint firstAttribute="width" constant="278" id="l3Y-nF-ivd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="loM-xC-G8h">
+                                <rect key="frame" x="1" y="25" width="329.5" height="21"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="학   번 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YO9-e3-CiM">
+                                        <rect key="frame" x="0.0" y="0.0" width="43.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20175149" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5R-DD-oWP">
+                                        <rect key="frame" x="51.5" y="0.0" width="278" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="3Il-sA-NYU"/>
+                                            <constraint firstAttribute="width" constant="278" id="Vgf-4H-aTK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KsT-QC-0g2">
+                                <rect key="frame" x="0.0" y="50" width="330.5" height="21"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBm-cW-if1">
+                                        <rect key="frame" x="0.0" y="0.0" width="44.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gns2472@gs.cwnu.ac.kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAY-N1-ihW">
+                                        <rect key="frame" x="52.5" y="0.0" width="278" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="uCt-1k-HZx"/>
+                                            <constraint firstAttribute="width" constant="278" id="zzb-wt-el7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="YO9-e3-CiM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="14" id="7Lt-Eu-1z6"/>
-                    <constraint firstItem="C5R-DD-oWP" firstAttribute="top" secondItem="hlc-mo-3NB" secondAttribute="bottom" constant="6" id="Byf-A2-plM"/>
-                    <constraint firstItem="Du3-yu-gUb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="26" id="ECl-Kb-dLF"/>
-                    <constraint firstItem="hlc-mo-3NB" firstAttribute="leading" secondItem="Du3-yu-gUb" secondAttribute="trailing" constant="8" symbolic="YES" id="Ley-L7-HM6"/>
-                    <constraint firstItem="mBm-cW-if1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="PCw-g9-i7g"/>
-                    <constraint firstItem="mBm-cW-if1" firstAttribute="top" secondItem="YO9-e3-CiM" secondAttribute="bottom" constant="8" symbolic="YES" id="RaE-mi-yol"/>
-                    <constraint firstItem="C5R-DD-oWP" firstAttribute="leading" secondItem="YO9-e3-CiM" secondAttribute="trailing" constant="8" symbolic="YES" id="d8v-iu-wQb"/>
-                    <constraint firstItem="ZAY-N1-ihW" firstAttribute="leading" secondItem="mBm-cW-if1" secondAttribute="trailing" constant="8" symbolic="YES" id="ei4-B4-0a1"/>
-                    <constraint firstItem="hlc-mo-3NB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="26" id="jIf-dG-MFl"/>
-                    <constraint firstItem="Du3-yu-gUb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="34" id="jUF-Oe-iHc"/>
-                    <constraint firstItem="YO9-e3-CiM" firstAttribute="top" secondItem="Du3-yu-gUb" secondAttribute="bottom" constant="8" symbolic="YES" id="n1V-LQ-zkx"/>
-                    <constraint firstItem="ZAY-N1-ihW" firstAttribute="top" secondItem="C5R-DD-oWP" secondAttribute="bottom" constant="10" id="pZd-FA-E6C"/>
+                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="KIJ-b2-1mp"/>
+                    <constraint firstItem="xeo-Cr-Vda" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="28" id="LDn-0a-ooJ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
