--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -895,11 +895,11 @@
             <objects>
                 <viewController id="Rtm-ta-tg8" customClass="EmailCertificationViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vsq-cH-yhO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4pw-4M-b96">
-                                <rect key="frame" x="24" y="132.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="44.5" width="366" height="40"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dYk-ej-KJO">
                                         <rect key="frame" x="0.0" y="0.0" width="278" height="40"/>
@@ -931,14 +931,14 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIi-fv-2AU">
-                                <rect key="frame" x="30" y="108" width="31.5" height="14.5"/>
+                                <rect key="frame" x="30" y="20" width="31.5" height="14.5"/>
                                 <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJ4-xb-8ID">
-                                <rect key="frame" x="24" y="197.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="109.5" width="366" height="40"/>
                                 <color key="backgroundColor" red="0.5568627451" green="0.62745098040000002" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="pqz-lM-MnS"/>
@@ -1642,7 +1642,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0Pb-cc-gjd"/>
+        <segue reference="0FG-kd-D7x"/>
         <segue reference="JcR-VF-5jB"/>
         <segue reference="3XJ-5t-W0x"/>
     </inferredMetricsTieBreakers>
